fix topics spacing

--- a/styleguide/source/assets/scss/03-organisms/_topics.scss
+++ b/styleguide/source/assets/scss/03-organisms/_topics.scss
@@ -23,7 +23,7 @@
   
   @include breakpoint($bp-med) {
     li {
-      width: 50%;
+      width: 47%;
       display: inline-block;
       float: left;
       
